2003-09-01 16:51  aspeer

	* CVS.pm, Makefile.PL: Added pod doc to CVS.pm, removed empty
	man3pods sections from Makefile.PL

2003-09-01 14:05  aspeer

	* ChangeLog, VERSION.pm: [no log message]

2003-09-01 14:05  aspeer

	* CVS.pm, Config.pm, LICENSE, MANIFEST, Makefile.PL, VERSION.pm:
	Ran through ExtUtils::Lint, added license and copyright info into
	module

2003-07-06 18:06  aspeer

	* ChangeLog, VERSION.pm: [no log message]

2003-07-06 18:06  aspeer

	* CVS.pm: Added routine in "manicheck" method to check for patch
	dir, and if found make sure all patch files are in CVS and the
	MANIFEST

2003-06-17 00:13  aspeer

	* ChangeLog, VERSION.pm: [no log message]

2003-06-17 00:13  aspeer

	* CVS.pm: Remove File::Touch module, add reminder if we use it
	again

2003-06-15 16:14  aspeer

	* ChangeLog, VERSION.pm: [no log message]

2003-06-15 16:14  aspeer

	* CVS.pm, support/dist_ci.inc: No longer 'touch' files that have
	mtime out of sync with CVS status, allow 'cvs status' to do this
	for us. Modify the may we go through the CVS 'Entries' file, read
	it all in at once and iterate. Previously going through it line by
	line, but were doing 'cvs' operations that changed it while we were
	iterating - result was missed some files, did some needlessly
	
	Update dist_ci to do 'cvs status' before check-in to update file
	timestamps if needed.

2003-04-29 13:48  aspeer

	* ChangeLog, VERSION.pm: [no log message]

2003-04-29 13:44  aspeer

	* CVS.pm, ChangeLog, VERSION.pm: [no log message]

2002-12-12 04:20  aspeer

	* ChangeLog, VERSION.pm: [no log message]

2002-12-12 04:20  aspeer

	* CVS.pm: Fix long standing bug in CVS.pm that did not test for
	file commit time, rather the version file commit time, and thus
	missed commiting sometimes

2002-12-09 12:53  aspeer

	* ChangeLog, VERSION.pm: [no log message]

2002-12-09 12:53  aspeer

	* CVS.pm, support/dist_ci.inc: Update to use "our" vars for
	important global vars, rather than "my"

2002-11-14 23:25  aspeer
