@@ -1,3 +1,11 @@
+2003-10-02 14:55  aspeer
+
+	* CVS.pm, Config.pm, VERSION.pm: [no log message]
+
+2003-09-01 16:51  aspeer
+
+	* ChangeLog, VERSION.pm: [no log message]
+
 2003-09-01 16:51  aspeer
 
 	* CVS.pm, Makefile.PL: Added pod doc to CVS.pm, removed empty
